# action-pin-check

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md  launch.md  pyproject.toml
.github/workflows/: ci.yml
examples/workflows/: unsafe.yml
src/action_pin_check/: __init__.py  cli.py  scanner.py
tests/: test_cli.py  test_scanner.py
tests/fixtures/: reusable-workflow.yml
tests/fixtures/quoted/: quoted-and-commented.yml
